--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 - change main() sleep() to pthread event (start locked/unlock when one of the threads exits)
 - implement remaining commands
+	- redact
+	- clear mode
