--- a/TODO
+++ b/TODO
@@ -2,5 +2,6 @@
 - implement remaining commands
 	- redact
 	- clear mode
+- add mark
 - dynamic prompt
 - add key to everyone's prompt? or add a command to display it? probably the former
